# opengate

./: .dockerignore  .gitignore  .zenodo.json  ADAPTERS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  opengate.http.example.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yaml  mcpb-pack.yaml  python-publish.yaml
datasets/: LABELING-GUIDE.md  SCHEMA.md
datasets/cases/: _retrieval-template.json  _template.json  case-authoryear-harvard.json  case-authoryear-mixed.json  case-cardio-bp.json  case-cardio-hf.json  case-cardio-lipids.json  case-derm-psoriasis.json  case-diabetes-glp1.json  case-endo-thyroid.json  case-gastro-ibd.json  case-hema-anemia.json  (+29 more)
docs/: GETTING-STARTED.md  ROADMAP.md
mcp/: .gitignore  README.md  mcpb-build.mjs  package-lock.json  package.json  server.json  server.mjs
paper/: experiments-plan.md  paper-draft.md
python/: .gitignore  README.md  pyproject.toml
python/opengate_grounding/: __init__.py  core.py  deepeval_metric.py  pytest_helper.py
python/tests/: test_grounding.py
results/: baseline.json
scripts/: capture-retrieval-case.mjs
src/: index.mjs  runner.mjs
tests/: adapter.test.mjs  agreement.test.mjs  baseline.test.mjs  citations.test.mjs  grounding-check.test.mjs  grounding-scorer.test.mjs  http-adapter.test.mjs  init.test.mjs  metrics.test.mjs  redaction-scorer.test.mjs  report.test.mjs  retrieval-scorer.test.mjs  simplification-scorer.test.mjs
(+60 files in other folders)
